--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
+    "axios": "^0.21.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-navigation": "^7.19.0",
@@ -26,8 +28,9 @@
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
+    "detox": "^18.20.2",
     "eslint": "^7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^27.1.0",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
