--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-navigation": "^7.19.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
@@ -27,6 +29,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^27.0.1",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
     "detox": "^18.20.2",
