--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start-e2e": "RN_SRC_EXT=e2e.js react-native start",
+    "detox-build-android": "detox build --configuration android",
+    "detux-test-android": "detox test --configuration android --watch",
     "start": "react-native start",
     "test": "jest",
+    "test-watch": "jest --watchAll",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -27,6 +30,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^27.0.1",
     "@types/react-native": "^0.64.5",
     "@types/react-native-vector-icons": "^6.4.8",
@@ -45,6 +49,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-vector-icons)/)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
